slight nav spacing issue

--- a/assets/css/components/_nav.scss
+++ b/assets/css/components/_nav.scss
@@ -13,7 +13,8 @@
     }
   }
 
-  h1 {
+  h1,
+  ul {
     margin: unset;
   }
 
@@ -76,6 +77,7 @@
   .nav__page-title {
     text-align: center;
     text-transform: uppercase;
+    margin-bottom: 2rem;
   }
 
   .nav__links-list {
